--- a/packages/c0r3y8_learn-ssr/package.json
+++ b/packages/c0r3y8_learn-ssr/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "simple-todos",
+  "name": "learn-ssr",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "spacejam test-packages ./ --driver-package=practicalmeteor:mocha-console-runner"
   },
   "dependencies": {
+    "assert": "^1.4.1",
+    "connect-redirection": "^0.0.1",
+    "fibers": "^1.0.15",
+    "meteor-node-stubs": "~0.2.0",
+    "url-pattern": "^1.0.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-module-resolver": "^2.4.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -19,21 +28,7 @@
     "babel-preset-meteor": "^6.14.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "bcrypt": "^1.0.2",
-    "classnames": "^2.2.5",
-    "fibers": "^1.0.15",
-    "meteor-node-stubs": "~0.2.0",
-    "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-helmet": "^4.0.0",
-    "react-redux": "^5.0.2",
-    "react-router-dom": "next",
-    "redux": "^3.6.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "benchmark": "^2.1.3",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-import-resolver-meteor": "^0.3.4",
@@ -41,8 +36,13 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^6.9.0",
-    "react-addons-perf": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2"
+    "eslint-plugin-react": "^6.9.0"
+  },
+  "peerDependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-helmet": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2"
   }
 }
