--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^15.4.2",
     "react-helmet": "^4.0.0",
     "react-redux": "^5.0.2",
-    "react-router-dom": "next",
+    "react-router-dom": "^4.0.0-beta.6",
     "redux": "^3.6.0"
   },
   "devDependencies": {
