--- a/packages/c0r3y8_learn-ssr/package.json
+++ b/packages/c0r3y8_learn-ssr/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "connect-redirection": "^0.0.1",
+    "cookie-parser": "^1.4.3",
     "fibers": "^1.0.15",
     "meteor-node-stubs": "~0.2.0",
     "url-pattern": "^1.0.3"
@@ -43,6 +44,6 @@
     "react-dom": "^15.4.2",
     "react-helmet": "^4.0.0",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2"
+    "react-router-dom": "4.0.0-beta.6"
   }
 }
