--- a/packages/c0r3y8_learn-ssr/package.json
+++ b/packages/c0r3y8_learn-ssr/package.json
@@ -11,6 +11,11 @@
     "cookie-parser": "^1.4.3",
     "fibers": "^1.0.15",
     "meteor-node-stubs": "~0.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-helmet": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "react-router-dom": "4.0.0-beta.6",
     "url-pattern": "^1.0.3"
   },
   "devDependencies": {
@@ -38,12 +43,5 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^6.9.0"
-  },
-  "peerDependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-helmet": "^4.0.0",
-    "react-redux": "^5.0.2",
-    "react-router-dom": "4.0.0-beta.6"
   }
 }
