--- a/packages/c0r3y8_learn-ssr/package.json
+++ b/packages/c0r3y8_learn-ssr/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "benchmark": "^2.1.3",
+    "chai-webdriver": "^1.2.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-import-resolver-meteor": "^0.3.4",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "selenium-webdriver": "^2.53.0"
   }
 }
