--- a/packages/c0r3y8_learn-ssr/package.json
+++ b/packages/c0r3y8_learn-ssr/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "^1.4.3",
     "fibers": "^1.0.15",
     "meteor-node-stubs": "~0.2.0",
-    "url-pattern": "^1.0.3"
+    "path-to-regexp": "^1.7.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
