--- a/packages/c0r3y8_learn-ssr-redux/package.json
+++ b/packages/c0r3y8_learn-ssr-redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-ssr",
+  "name": "learn-ssr-redux",
   "private": true,
   "scripts": {
     "start": "meteor run",
@@ -7,10 +7,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
-    "connect-redirection": "^0.0.1",
-    "fibers": "^1.0.15",
     "meteor-node-stubs": "~0.2.0",
-    "path-to-regexp": "^1.7.0",
     "warning": "^3.0.0"
   },
   "devDependencies": {
@@ -45,6 +42,8 @@
   "peerDependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "4.0.0-beta.6"
+    "react-redux": "^5.0.3",
+    "react-router-dom": "4.0.0-beta.6",
+    "redux": "^3.6.0"
   }
 }
