--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.5",
     "fibers": "^1.0.15",
     "meteor-node-stubs": "~0.2.0",
+    "node-cache": "^4.1.1",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
