--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-dead-code-elimination": "^2.2.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-inline-environment-variables": "^0.0.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.12",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-meteor": "^6.22.0",
@@ -23,27 +23,28 @@
     "bcrypt": "^1.0.2",
     "classnames": "^2.2.5",
     "fibers": "^1.0.15",
+    "lru-cache": "^4.0.2",
     "meteor-node-stubs": "~0.2.0",
-    "node-cache": "^4.1.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-helmet": "^4.0.0",
+    "react-helmet": "^5.1.3",
     "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-actions": "^1.2.2"
+    "redux-actions": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.16.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-import-resolver-meteor": "^0.3.4",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-class-property": "^1.0.3",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^7.0.1",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.4.2"
   }
